--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <h1 class="page-header">About</h1>
-<p>Hello cloudcover!!!!! <br> 
+<p>Hello cloudcover Welcome Bibek!!!!! <br> 
 Learn the CI/CD Deployment with Jenkins, Helm , Spinnaker , Docker & K8s.</p>
 
 </h1>Welcome to the Team and Happy Learning !!!</h1>
